Add more examples

--- a/sandpit/index.html
+++ b/sandpit/index.html
@@ -13,4 +13,5 @@
 <script type="text/javascript" src="loops.js" async></script>
 <script type="text/javascript" src="underscore.js" async></script>
 <script type="text/javascript" src="objects.js" async></script>
+<script type="text/javascript" src="closures.js" async></script>
 
